--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -3,142 +3,127 @@
   <requires lib="gtk" version="4.0"/>
   <template class="EditorPage" parent="GtkWidget">
     <child>
-      <object class="GtkBox" id="box">
-        <property name="orientation">vertical</property>
+      <object class="GtkOverlay" id="overlay">
+        <property name="vexpand">true</property>
+        <signal name="get-child-position" handler="get_child_position_cb"/>
         <child>
-          <object class="EditorInfoBar" id="infobar">
+          <object class="GtkBox">
+            <property name="orientation">horizontal</property>
+            <child>
+              <object class="GtkScrolledWindow" id="scroller">
+                <property name="hexpand">true</property>
+                <property name="vexpand">true</property>
+                <child>
+                  <object class="EditorSourceView" id="view">
+                    <style>
+                      <class name="editor"/>
+                    </style>
+                    <signal name="notify::font-scale" handler="font_scale_changed_cb" swapped="true"/>
+                    <property name="auto-indent">true</property>
+                    <property name="top-margin">12</property>
+                    <property name="bottom-margin">12</property>
+                    <property name="left-margin">12</property>
+                    <property name="right-margin">12</property>
+                    <property name="monospace">true</property>
+                    <property name="smart-backspace">true</property>
+                    <property name="smart-home-end">before</property>
+                    <property name="input-hints">word-completion</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="EditorSourceMap" id="map">
+                <property name="hexpand">false</property>
+                <property name="visible">false</property>
+                <property name="view">view</property>
+              </object>
+            </child>
           </object>
         </child>
-        <child>
-          <object class="AdwToolbarView" id="toolbar_view">
-            <property name="vexpand">true</property>
-            <property name="bottom-bar-style">raised</property>
-            <child>
-              <object class="GtkOverlay" id="overlay">
-                <property name="vexpand">true</property>
-                <signal name="get-child-position" handler="get_child_position_cb"/>
-                <child>
-                  <object class="GtkBox">
-                    <property name="orientation">horizontal</property>
-                    <child>
-                      <object class="GtkScrolledWindow" id="scroller">
-                        <property name="hexpand">true</property>
-                        <property name="vexpand">true</property>
-                        <child>
-                          <object class="EditorSourceView" id="view">
-                            <style>
-                              <class name="editor"/>
-                            </style>
-                            <signal name="notify::font-scale" handler="font_scale_changed_cb" swapped="true"/>
-                            <property name="auto-indent">true</property>
-                            <property name="top-margin">12</property>
-                            <property name="bottom-margin">12</property>
-                            <property name="left-margin">12</property>
-                            <property name="right-margin">12</property>
-                            <property name="monospace">true</property>
-                            <property name="smart-backspace">true</property>
-                            <property name="smart-home-end">before</property>
-                            <property name="input-hints">word-completion</property>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="EditorSourceMap" id="map">
-                        <property name="hexpand">false</property>
-                        <property name="visible">false</property>
-                        <property name="view">view</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-                <child type="overlay">
-                  <object class="GtkProgressBar" id="progress_bar">
-                    <style>
-                      <class name="osd"/>
-                    </style>
-                    <property name="can-focus">false</property>
-                    <property name="halign">fill</property>
-                    <property name="hexpand">true</property>
-                    <property name="valign">start</property>
-                    <property name="vexpand">false</property>
-                    <layout>
-                      <property name="measure">true</property>
-                    </layout>
-                  </object>
-                </child>
-                <child type="overlay">
-                  <object class="EditorPositionLabel" id="position_label">
-                    <property name="visible">false</property>
-                    <property name="halign">end</property>
-                    <property name="valign">end</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child type="bottom">
-              <object class="GtkBox">
-                <property name="orientation">vertical</property>
-                <child>
-                  <object class="GtkRevealer" id="goto_line_revealer">
-                    <property name="reveal-child">False</property>
-                    <property name="transition-type">slide-up</property>
-                    <property name="child">
-                      <object class="GtkBox">
-                        <property name="halign">center</property>
-                        <style>
-                          <class name="toolbar"/>
-                        </style>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="label" translatable="yes">Go to Line</property>
-                            <property name="margin-start">3</property>
-                            <property name="margin-end">3</property>
-                            <style>
-                              <class name="heading"/>
-                            </style>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkEntry" id="goto_line_entry">
-                            <property name="width-chars">3</property>
-                            <property name="max-width-chars">7</property>
-                            <signal name="activate" handler="goto_line_entry_activate_cb" swapped="true"/>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkButton" id="goto_line_button">
-                            <property name="label" translatable="yes">Go</property>
-                            <property name="width-request">50</property>
-                            <property name="action-name">page.goto-line</property>
-                            <style>
-                              <class name="suggested-action"/>
-                            </style>
-                          </object>
-                        </child>
-                      </object>
-                    </property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkRevealer" id="search_revealer">
-                    <property name="reveal-child">False</property>
-                    <property name="transition-type">slide-up</property>
-                    <property name="child">
-                      <object class="AdwClamp">
-                        <property name="maximum-size">500</property>
-                        <property name="child">
-                          <object class="EditorSearchBar" id="search_bar"/>
-                        </property>
-                      </object>
-                    </property>
-                  </object>
-                </child>
-              </object>
-            </child>
+        <child type="overlay">
+          <object class="GtkProgressBar" id="progress_bar">
+            <style>
+              <class name="osd"/>
+            </style>
+            <property name="can-focus">false</property>
+            <property name="halign">fill</property>
+            <property name="hexpand">true</property>
+            <property name="valign">start</property>
+            <property name="vexpand">false</property>
+            <layout>
+              <property name="measure">true</property>
+            </layout>
+          </object>
+        </child>
+        <child type="overlay">
+          <object class="EditorPositionLabel" id="position_label">
+            <property name="visible">false</property>
+            <property name="halign">end</property>
+            <property name="valign">end</property>
           </object>
         </child>
       </object>
     </child>
   </template>
+  <object class="GtkBox" id="bottom_bars">
+    <property name="orientation">vertical</property>
+    <child>
+      <object class="GtkRevealer" id="search_revealer">
+        <property name="reveal-child">False</property>
+        <property name="transition-type">slide-up</property>
+        <property name="child">
+          <object class="AdwClamp">
+            <property name="maximum-size">500</property>
+            <property name="child">
+              <object class="EditorSearchBar" id="search_bar"/>
+            </property>
+          </object>
+        </property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkRevealer" id="goto_line_revealer">
+        <property name="reveal-child">False</property>
+        <property name="transition-type">slide-up</property>
+        <property name="child">
+          <object class="GtkBox">
+            <property name="halign">center</property>
+            <style>
+              <class name="toolbar"/>
+            </style>
+            <child>
+              <object class="GtkLabel">
+                <property name="label" translatable="yes">Go to Line</property>
+                <property name="margin-start">3</property>
+                <property name="margin-end">3</property>
+                <style>
+                  <class name="heading"/>
+                </style>
+              </object>
+            </child>
+            <child>
+              <object class="GtkEntry" id="goto_line_entry">
+                <property name="width-chars">3</property>
+                <property name="max-width-chars">7</property>
+                <signal name="activate" handler="goto_line_entry_activate_cb" swapped="true"/>
+              </object>
+            </child>
+            <child>
+              <object class="GtkButton" id="goto_line_button">
+                <property name="label" translatable="yes">Go</property>
+                <property name="width-request">50</property>
+                <property name="action-name">page.goto-line</property>
+                <style>
+                  <class name="suggested-action"/>
+                </style>
+              </object>
+            </child>
+          </object>
+        </property>
+      </object>
+    </child>
+  </object>
+  <object class="EditorInfoBar" id="infobar">
+  </object>
 </interface>
