--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -14,6 +14,13 @@
       </object>
     </child>
     <child>
+      <object class="AdwBreakpoint">
+        <condition>max-width: 400sp</condition>
+        <setter object="multi_layout" property="layout-name">narrow</setter>
+        <setter object="open_button_stack" property="visible-child-name">narrow</setter>
+      </object>
+    </child>
+    <child>
       <object class="GtkShortcutController">
         <child>
           <object class="GtkShortcut">
@@ -52,14 +59,12 @@
                         <property name="halign">end</property>
                         <property name="hexpand">true</property>
                         <property name="label">•</property>
-                        <property name="margin-end">6</property>
                         <property name="visible">false</property>
                       </object>
                     </child>
                     <child type="center">
                       <object class="GtkLabel" id="title">
-                        <property name="ellipsize">end</property>
-                        <property name="width-chars">3</property>
+                        <property name="ellipsize">middle</property>
                         <style>
                           <class name="title"/>
                         </style>
@@ -97,12 +102,50 @@
             </property>
             <child type="start">
               <object class="GtkMenuButton" id="open_menu_button">
-                <property name="label" translatable="yes">_Open</property>
-                <property name="use-underline">True</property>
                 <property name="tooltip-text" translatable="yes">Recently Used Documents</property>
+                <style>
+                  <class name="flat"/>
+                </style>
                 <property name="popover">
                   <object class="EditorOpenPopover" id="open_menu_popover"/>
                 </property>
+                <child>
+                  <object class="GtkStack" id="open_button_stack">
+                    <child>
+                      <object class="GtkStackPage">
+                        <property name="name">wide</property>
+                        <property name="child">
+                          <object class="GtkBox">
+                            <property name="spacing">3</property>
+                            <child>
+                              <object class="GtkLabel">
+                                <property name="label" translatable="yes">_Open</property>
+                                <property name="use-underline">True</property>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="GtkImage">
+                                <property name="icon-name">pan-down-symbolic</property>
+                              </object>
+                            </child>
+                          </object>
+                        </property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkStackPage">
+                        <property name="name">narrow</property>
+                        <property name="child">
+                          <object class="GtkImage">
+                            <property name="icon-name">folder-symbolic</property>
+                          </object>
+                        </property>
+                      </object>
+                    </child>
+                    <property name="visible-child-name">wide</property>
+                    <property name="hhomogeneous">false</property>
+                  </object>
+                </child>
               </object>
             </child>
             <child type="start">
