--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -37,8 +37,69 @@
       </object>
     </child>
     <child>
-      <object class="EditorFullscreenBox" id="fullscreen_box">
-        <child type="top">
+      <object class="AdwMultiLayoutView" id="multi_layout">
+        <child type="properties">
+          <object class="EditorPropertiesPanel">
+            <binding name="page">
+              <lookup name="visible-page">EditorWindow</lookup>
+            </binding>
+          </object>
+        </child>
+        <child type="content">
+          <object class="GtkStack" id="stack">
+            <property name="hexpand">true</property>
+            <child>
+              <object class="GtkStackPage">
+                <property name="name">tabs</property>
+                <property name="child">
+                  <object class="GtkBox">
+                    <property name="orientation">vertical</property>
+                    <child>
+                      <object class="AdwTabView" id="tab_view">
+                        <property name="hexpand">true</property>
+                        <property name="menu-model">tab_menu</property>
+                        <property name="vexpand">true</property>
+                        <signal name="close-page" handler="on_tab_view_close_page_cb" swapped="true"/>
+                        <signal name="setup-menu" handler="on_tab_view_setup_menu_cb" swapped="true"/>
+                        <signal name="create-window" handler="on_tab_view_create_window_cb" swapped="true"/>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="EditorStatusbar" id="statusbar">
+                        <property name="visible">false</property>
+                      </object>
+                    </child>
+                  </object>
+                </property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkStackPage">
+                <property name="name">empty</property>
+                <property name="child">
+                  <object class="AdwStatusPage" id="empty">
+                    <property name="title" translatable="yes">Open a Document</property>
+                    <property name="description" translatable="yes">Create a new document (Ctrl+N), or open an existing one (Ctrl+O)</property>
+                    <property name="child">
+                      <object class="GtkButton">
+                        <style>
+                          <class name="suggested-action"/>
+                          <class name="large-button"/>
+                          <class name="pill"/>
+                        </style>
+                        <property name="action-name">session.new-draft</property>
+                        <property name="halign">center</property>
+                        <property name="use-underline">true</property>
+                        <property name="label" translatable="yes">_New Empty File</property>
+                      </object>
+                    </property>
+                  </object>
+                </property>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child type="header_bar">
           <object class="AdwHeaderBar" id="header_bar">
             <property name="show-start-title-buttons" bind-source="EditorWindow" bind-property="fullscreened" bind-flags="sync-create|invert-boolean"/>
             <property name="show-end-title-buttons" bind-source="EditorWindow" bind-property="fullscreened" bind-flags="sync-create|invert-boolean"/>
@@ -190,56 +251,26 @@
             </child>
           </object>
         </child>
-        <child type="top">
+        <child type="tab_bar">
           <object class="AdwTabBar" id="tab_bar">
             <property name="view">tab_view</property>
           </object>
         </child>
-        <property name="content">
-          <object class="AdwMultiLayoutView" id="multi_layout">
-            <child type="properties">
-              <object class="EditorPropertiesPanel">
-                <binding name="page">
-                  <lookup name="visible-page">EditorWindow</lookup>
-                </binding>
-              </object>
-            </child>
-            <child type="content">
-              <object class="GtkStack" id="stack">
-                <property name="hexpand">true</property>
-                <child>
-                  <object class="AdwTabView" id="tab_view">
-                    <property name="hexpand">true</property>
-                    <property name="menu-model">tab_menu</property>
-                    <signal name="close-page" handler="on_tab_view_close_page_cb" swapped="true"/>
-                    <signal name="setup-menu" handler="on_tab_view_setup_menu_cb" swapped="true"/>
-                    <signal name="create-window" handler="on_tab_view_create_window_cb" swapped="true"/>
+        <child>
+          <object class="AdwLayout">
+            <property name="name">wide</property>
+            <property name="content">
+              <object class="EditorFullscreenBox" id="fullscreen_box">
+                <child type="top">
+                  <object class="AdwLayoutSlot">
+                    <property name="id">header_bar</property>
                   </object>
                 </child>
-                <child>
-                  <object class="AdwStatusPage" id="empty">
-                    <property name="title" translatable="yes">Open a Document</property>
-                    <property name="description" translatable="yes">Create a new document (Ctrl+N), or open an existing one (Ctrl+O)</property>
-                    <property name="child">
-                      <object class="GtkButton">
-                        <style>
-                          <class name="suggested-action"/>
-                          <class name="large-button"/>
-                          <class name="pill"/>
-                        </style>
-                        <property name="action-name">session.new-draft</property>
-                        <property name="halign">center</property>
-                        <property name="use-underline">true</property>
-                        <property name="label" translatable="yes">_New Empty File</property>
-                      </object>
-                    </property>
+                <child type="top">
+                  <object class="AdwLayoutSlot">
+                    <property name="id">tab_bar</property>
                   </object>
                 </child>
-              </object>
-            </child>
-            <child>
-              <object class="AdwLayout">
-                <property name="name">wide</property>
                 <property name="content">
                   <object class="AdwOverlaySplitView" id="split_view">
                     <property name="sidebar-position">end</property>
@@ -258,36 +289,45 @@
                   </object>
                 </property>
               </object>
-            </child>
-            <child>
-              <object class="AdwLayout">
-                <property name="name">narrow</property>
+            </property>
+          </object>
+        </child>
+        <child>
+          <object class="AdwLayout">
+            <property name="name">narrow</property>
+            <property name="content">
+              <object class="AdwBottomSheet">
+                <property name="open" bind-source="properties_button" bind-property="active" bind-flags="bidirectional|sync-create"/>
                 <property name="content">
-                  <object class="AdwBottomSheet">
-                    <property name="open" bind-source="properties_button" bind-property="active" bind-flags="bidirectional|sync-create"/>
+                  <object class="EditorFullscreenBox">
+                    <child type="top">
+                      <object class="AdwLayoutSlot">
+                        <property name="id">header_bar</property>
+                      </object>
+                    </child>
+                    <child type="top">
+                      <object class="AdwLayoutSlot">
+                        <property name="id">tab_bar</property>
+                      </object>
+                    </child>
                     <property name="content">
                       <object class="AdwLayoutSlot">
                         <property name="id">content</property>
                       </object>
                     </property>
-                    <property name="sheet">
-                      <object class="AdwToolbarView">
-                        <child>
-                          <object class="AdwLayoutSlot">
-                            <property name="id">properties</property>
-                          </object>
-                        </child>
+                  </object>
+                </property>
+                <property name="sheet">
+                  <object class="AdwToolbarView">
+                    <child>
+                      <object class="AdwLayoutSlot">
+                        <property name="id">properties</property>
                       </object>
-                    </property>
+                    </child>
                   </object>
                 </property>
               </object>
-            </child>
-          </object>
-        </property>
-        <child type="bottom">
-          <object class="EditorStatusbar" id="statusbar">
-            <property name="visible">false</property>
+            </property>
           </object>
         </child>
       </object>
