window: allow bypassing confirmation check
Fixes: #803

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -368,6 +368,7 @@
         <attribute name="id">discard-changes</attribute>
         <attribute name="label" translatable="yes">_Discard Changes…</attribute>
         <attribute name="action">page.discard-changes</attribute>
+        <attribute name="target" type="b">false</attribute>
       </item>
     </section>
     <section>
