shortcuts-dialog: Port to AdwShortcutsDialog

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -406,7 +406,7 @@
       </item>
       <item>
         <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
-        <attribute name="action">win.alternate-help-overlay</attribute>
+        <attribute name="action">app.shortcuts</attribute>
       </item>
       <item>
         <attribute name="label" translatable="yes">A_bout Text Editor</attribute>
